--- a/sandbox/rails-4.1/lib/plugins/awesome_nested_set/CHANGELOG
+++ b/sandbox/rails-4.1/lib/plugins/awesome_nested_set/CHANGELOG
@@ -1,3 +1,8 @@
+* Support Rails 4.1 [Micah Geisel]
+* Support dependent: restrict_with_error [Tiago Moraes]
+* Added information to the README regarding indexes to be added for performance [bdarfler]
+* Modified associate_parents to add child objects to the parent#children collection [Tiago Moraes]
+
 2.1.6
 * Fixed rebuild! when there is a default_scope with order [Adrian Serafin]
 * Testing with stable bundler, ruby 2.0, MySQL and PostgreSQL [Philip Arndt]
